[gd_scene load_steps=4 format=3 uid="uid://hco6jphk1i4i"]

[ext_resource type="Script" path="res://Enemy/red_ball.gd" id="1_yv5ka"]
[ext_resource type="Texture2D" uid="uid://bna2k0qcvjb6h" path="res://Enemy/red_ball.png" id="2_t3jry"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8po01"]
size = Vector2(6, 6)

[node name="red_ball" type="Area2D"]
collision_layer = 16
collision_mask = 32
script = ExtResource("1_yv5ka")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_t3jry")

[node name="HitBox" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_8po01")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
visible = false
scale = Vector2(0.5, 0.5)

[node name="RayCast2D" type="RayCast2D" parent="."]
collision_mask = 3
hit_from_inside = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
